fixes #62, overflow has to be set for the html-element, not only the body -> the double-scrollbars cause weird behaviour of Stud.IP-sidebar

--- a/assets/ohn.css
+++ b/assets/ohn.css
@@ -2302,7 +2302,7 @@ html.js .newsletter-form {
     background-color: #8DCEE6;
 }
 @media only screen and (max-width: 1020px) {
-body {
+html {
     overflow-x: hidden;
 }
 }
